# bioconda2rpm

./: Cargo.toml  MODULE_GOVERNANCE_CHARTER.md  README.md
containers/rpm-build-images/: Dockerfile.almalinux-10.1  Dockerfile.almalinux-9.7  Dockerfile.fedora-43  README.md
docs/: ARD.md  AUDIT_EVIDENCE_TEMPLATE_AND_TIER1_CHECKLIST.md  CLI_contract.md  CUSTOMER_PACKAGE_INTAKE_SLA.md  DOCUMENTATION_CROSSWALK.md  ECOSYSTEM_STABILITY_STRESS_TEST_FRAMEWORK.md  FAILURE_PRIORITY_QUEUE.md  FOUNDER_EXECUTION_DASHBOARD.md  LAUNCH_PACKAGING_CONSTITUTION.md  LONG_TERM_ECOSYSTEM_EVOLUTION_MODEL.md  NORMALIZATION_MATURITY_INDEX.md  NORMALIZATION_READINESS_GATE.md  Python_RPM_charter.md  REDESIGN_PLAN.md  RPM_charter.md  R_RPM_charter.md  Rust_RPM_charter.md  SRS.md  STAGE_ISOLATION_AND_SAMPLING_BLUEPRINT.md  STATISTICAL_SAMPLING_STRATEGY.md  USERGUIDE.md  bioconda2rpm_cheatsheet.md  decision_log.md  dependency_policy.md  exploration_baseline_2026-02-27.md  verification_software.txt
docs/historical_log_mining/: historical_failure_clusters.tsv  historical_failure_records.tsv  historical_log_mining_report.md  historical_log_mining_summary.json  historical_normalization_candidates.tsv
reports/verification/: random25_20260228.txt  random25_20260228_results.tsv
scripts/: conda_render_ir.py  historical_log_mining.py
src/: build_lock.rs  cli.rs  ingress.rs  main.rs  priority_specs.rs  recipe_repo.rs  ui.rs
tests/: cli_surface.rs
