[package]
name = "bioconda2rpm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
minijinja = "2.12.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.19.1"
